# autowrite

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run  screenshot.avif
.github/workflows/: python-package.yml
autowrite/: gui.py  main.py
autowrite/handwriting_synthesis/: __init__.py  config.py
autowrite/handwriting_synthesis/data_frame/: DataFrame.py
autowrite/handwriting_synthesis/drawing/: operations.py
autowrite/handwriting_synthesis/hand/: Hand.py  _draw.py
autowrite/handwriting_synthesis/rnn/: LSTMAttentionCell.py  RNN.py  operations.py
autowrite/handwriting_synthesis/tf/: BaseModel.py  utils.py
autowrite/handwriting_synthesis/training/: DataReader.py  batch_generator.py  train.py
autowrite/handwriting_synthesis/training/preparation/: operations.py  prepare.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx
tests/: test_basic.py
