[project]
name = "autowrite"
version = "0.1.0"
description = "Autowrite: handwriting synthesis"
authors = [ {"name" = "Don Bowman" }]
license = "Apache-2.0"


[tool.poetry.dependencies]
python = "^3.12"
CairoSVG = "~2.9.0"
matplotlib = "~3.10.0"
numpy = "~2.4.0"
pandas = "~3.0.0"
scikit-learn = "~1.8.0"
scipy = "~1.17.0"
svgwrite = "~1.4.0"
tensorflow = "~2.21.0"
tensorflow-probability = {version = "~0.25.0", extras = ["tf"]}
pyserial = "^3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
